header fixed, content aligned center

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,9 +15,17 @@ html {
  */
 
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   color: #244751;
   background-color: #eee;
+}
+
+main {
+  width: 450px;
+  background-color: white;
+  margin: auto;
+  margin-top: 100px;
 }
 
 /*
